--- a/views/grammar.slim
+++ b/views/grammar.slim
@@ -4,53 +4,32 @@ script[type="text/x-mathjax-config"]
 script[type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"]
 
 br
-|  Recuerde que una gramática $G$ es una cuaterna $G =(\Sigma,V,P,S)$. 
-ol
-  li
-    | $\Sigma$ es el conjunto de <i>terminales</i>. 
-  li
-    | $V$ es un conjunto (disjunto de $\Sigma$) que se denomina conjunto de 
-    | <i>variables sintácticas</i>  o <i>categorías gramáticales</i>
-    | , 
-  li
-    | $P$ es un conjunto de pares de $V \times (V \cup \Sigma )^*$.
-      En vez de escribir un par usando la notación $(A, \alpha) \in
-      P$ se escribe $A \rightarrow \alpha$. Un elemento de $P$ se
-      denomina <i>producción</i>.
-  li
-    | Por último, $S$ es un símbolo del conjunto $V$ que se denomina símbolo de arranque. 
-  br
-  | Dada una gramática $G=(\Sigma,V,P,S)$ se denota por $L(G)$ o lenguaje
-    generado por $G$ al lenguaje: <br/>
-  .centered
-      | $L(G) = \{ x \in \Sigma^* : S \stackrel{*}{\Longrightarrow} x \}$
-  br
-    | Esto es, el lenguaje generado por la gramática $G$ esta
-      formado por las cadenas de terminales que pueden ser <i>derivados</i> 
-    | desde el símbolo de arranque.
-
-| Esta es la gramática para nuestra práctica:
+| Gram&aacute;tica utilizada en la pr&aacute;ctica, definida como $G =(\Sigma,V,P,S)$:
 
 ol
   li
-    |  $\Sigma = \{ ; =, ID, P, +, *, (, ), NUM \}$, 
+    |  $\Sigma = \{ ;, ., =, CONST, VAR, PROCEDURE, ID, P, ODD, CALL, END, IF, THEN, WHILE, DO, +, -, *, /, ==, <, >, <=, >=, !=, (, ), NUM \}$, 
   li
-    |  $V = \{ statements, statement, expression, term, factor \}$ 
+    |  $V = \{ program, block, statement, condition, expression, term, factor \}$ 
   li
-    |  Productions: 
+    |  Producciones: 
     ol
       li
-        |  statements $ \rightarrow$ statement ';' statements $\vert$ statement 
+        |  program $ \rightarrow$ block '.'
       li
-        |  statement $ \rightarrow$ ID '=' expression $\vert$ P expression 
+        |  block $ \rightarrow$ [CONST ID '=' NUM {',' ID '=' NUM} ';'] [VAR ID {',' ID} ';'] {PROCEDURE ID ';' block ';'} statement
       li
-        |  expression $ \rightarrow$ term '+' expression $\vert$ term 
+        |  statement $ \rightarrow$ ID '=' expression $\vert$ CALL ID $\vert$ BEGIN statement ';' {statement ';'} END $\vert$ IF condition THEN statment $\vert$ WHILE condition DO statment
       li
-        |  term $ \rightarrow$ factor '*' term $\vert$ factor 
+        |  condition $ \rightarrow$ ODD expression $\vert$ expression '(==|#|<|>|<=|>=|!=)' expression
+      li
+        |  expression $ \rightarrow$ term '(+|-)' expression $\vert$ term 
+      li
+        |  term $ \rightarrow$ factor '(*|/)' term $\vert$ factor 
       li
         |  factor $ \rightarrow$ '(' expression ')' $\vert$ ID $ \vert$ NUM 
   li
-    |  Start symbol: $statements$ 
+    |  S&iacute;mbolo de inicio: $program$ 
 br
 br
 br
