--- a/views/nav.slim
+++ b/views/nav.slim
@@ -1,24 +1,10 @@
 nav
   ul
     li 
-      a href=="/grammar"  title="Grammar" class==current?("/grammar") Grammar
-    li 
       a href=="/"  title="Home" class==current? Home
     li 
-      a href=="http://campusvirtual.ull.es/1314/course/view.php?id=1104"  title="PL-UDV" PL-UDV
-    li
-      a href=="https://github.com/crguezl/prdcalc"  title="Repo" Repo
-    li
-      a href=="http://en.wikipedia.org/wiki/Recursive_descent_parser"  title="Wikipedia" Wikipedia
-    li
-      a href=="http://slim-lang.com/"  title="Slim" Slim
-    li
-      a href=="http://sass-lang.com/"  title="Sass" Sass
-    li
-      a href=="http://coffeescript.org/"  title="Coffeescript" CoffeeScript
+      a href=="/gramatica"  title="Gram&aacute;tica" class==current?("/gramatica") Gram&aacute;tica
     li 
-      a href=="http://crguezl.github.io/pl-html/"  title="PLGH" PL-GH
+      a href=="/tests"  title="Tests" class==current?("/tests") Tests
     li 
-      a href=="http://docs.mathjax.org/en/latest/start.html"  title="MathJax" MathJax
-    li
-      a href=="https://plus.google.com/u/0/+CasianoRodriguezLeon/" title="crguezl" crguezl
+      a href=="https://github.com/alu0100694987/p5-pdl"  title="GitHub" GitHub
