Corrección de errores 2

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,7 +1,7 @@
 doctype html
-html
+html lang="en"
   head
-    title Analizador L&eacute;xico JavaScript
+    title== @title
     meta charset="utf-8"
     meta name="Author" content=("Cristo Gonz&aacute;lez Rodr&iacute;guez - alu0100694987 | Sawan J. Kapai Harpalani - alu0100694765") 
     meta name="Description" content=("Analizador Sint&aacute;ctico Descendente Predictivo Recursivo") 
