Corrección de errores 5

--- a/views/tests.slim
+++ b/views/tests.slim
@@ -1,10 +1,10 @@
 #mocha
 javascript:
-  | mocha.run();
+  mocha.run();
     javascript:
-  | function dump(fileName) {
-    | $.get(fileName, function (data) {
-      | $("#input").val(data);
-    | });
-  | };
+  function dump(fileName) {
+    $.get(fileName, function (data) {
+      $("#input").val(data);
+    });
+  };
    
