--- a/views/layout.slim
+++ b/views/layout.slim
@@ -11,11 +11,11 @@ html lang="en"
     link href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css" media="screen, projection" rel="stylesheet"
     script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
     script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"
-    script src="javascripts/main.js"
+    script src="/javascripts/main.js"
     
     /! Tests
     script src="tests/chai.js" 
-    script src="/tests/mocha.js" 
+    script src="tests/mocha.js" 
     javascript:
         | mocha.setup('tdd')      %script{:src => "/tests/tests.js"}
     
