--- a/views/home.slim
+++ b/views/home.slim
@@ -19,13 +19,21 @@ p This website contains a simple example of a predictive parser
         | Fichero Error
       input#files type="file" 
 
-    javascript:
+  javascript:
+        var editor = CodeMirror.fromTextArea(document.getElementById("original"), {
+          lineNumbers: true,
+          viewportMargin: Infinity,
+          mode: "text/x-pascal" // Usamos pascal, que se parece bastante.
+        });
+        
         function dump(fileName) {
           $.get(fileName, function (data) {
-            $("#original").val(data);
+            //$("#original").val(data);
+            editor.setValue(data);
            });
         };
 
+    
         document.getElementById('files').addEventListener('change', CopyMe, false);
 
         function CopyMe(evt) {
