--- a/views/home.slim
+++ b/views/home.slim
@@ -23,7 +23,6 @@ p This website contains a simple example of a predictive parser
         var editor = CodeMirror.fromTextArea(document.getElementById("original"), {
           lineNumbers: true,
           viewportMargin: Infinity,
-          mode: "text/x-pascal" // Usamos pascal, que se parece bastante.
         });
         
         function dump(fileName) {
@@ -33,21 +32,19 @@ p This website contains a simple example of a predictive parser
            });
         };
 
-    
-        document.getElementById('files').addEventListener('change', CopyMe, false);
+     document.getElementById('files').addEventListener('change', CopyMe, false);
 
         function CopyMe(evt) {
           var file = evt.target.files[0];
             if (file) {
               var reader = new FileReader();
-                reader.onload = function(e) { 
-                  original.innerHTML = e.target.result;
-                    }
-                    var c = reader.readAsText(file);
-                }
+              reader.onload = function(e) { 
+                //original.innerHTML = e.target.result;
+              editor.setValue(e.target.result);
+              }
+              var c = reader.readAsText(file);
+            }
             else { alert("Failed to load file"); }
         }
-
-
-input#PARSE.mylink[value="parse" type="button"]
-pre#OUTPUT
+input#PARSE.mylink[value="Parsear" type="button"]
+pre#OUTPUT &lt;Sin parsear&gt;
