--- a/views/home.slim
+++ b/views/home.slim
@@ -32,19 +32,20 @@ p This website contains a simple example of a predictive parser
            });
         };
 
-     document.getElementById('files').addEventListener('change', CopyMe, false);
+    document.getElementById('files').addEventListener('change', CopyMe, false);
 
         function CopyMe(evt) {
           var file = evt.target.files[0];
             if (file) {
               var reader = new FileReader();
-              reader.onload = function(e) { 
-                //original.innerHTML = e.target.result;
-              editor.setValue(e.target.result);
-              }
-              var c = reader.readAsText(file);
-            }
+                reader.onload = function(e) { 
+                  original.innerHTML = e.target.result;
+                    }
+                    var c = reader.readAsText(file);
+                }
             else { alert("Failed to load file"); }
         }
-input#PARSE.mylink[value="Parsear" type="button"]
-pre#OUTPUT &lt;Sin parsear&gt;
+
+
+input#PARSE.mylink[value="parse" type="button"]
+pre#OUTPUT
