--- a/views/home.slim
+++ b/views/home.slim
@@ -19,10 +19,16 @@ p This website contains a simple example of a predictive parser
         | Fichero Error
       input#files type="file" 
 
-  javascript:    
+  javascript:
+        var editor = CodeMirror.fromTextArea(document.getElementById("original"), {
+          lineNumbers: true,
+          viewportMargin: Infinity
+        });
+        
         function dump(fileName) {
           $.get(fileName, function (data) {
             $("#original").val(data);
+            editor.setValue(data);
            });
         };
 
