--- a/views/tests.slim
+++ b/views/tests.slim
@@ -1,4 +1,8 @@
 #mocha
+script src="/tests/chai.js" 
+script src="/tests/mocha.js"
+<script>mocha.setup('tdd')</script>
+<script src="/tests/tests.js"></script>
 javascript:
   mocha.run();
     javascript:
