--- a/views/tests.slim
+++ b/views/tests.slim
@@ -1,7 +1,7 @@
 #mocha
 script src="/tests/chai.js" 
 script src="/tests/mocha.js"
-script src="/tests/principal.js"
+script src="/tests/main.js"
 <script>mocha.setup('tdd')</script>
 <script src="/tests/tests.js"></script>
 javascript:
