--- a/views/layout.slim
+++ b/views/layout.slim
@@ -24,7 +24,7 @@ html lang="en"
   body
     header
       h1 Analizador Sint&aacute;ctico Descendente Predictivo Recursivo
-      #cssmenu
+       #cssmenu
         ul
           li
             a href="/" 
@@ -44,10 +44,10 @@ html lang="en"
             ul
               li
                 a href="https://github.com/alu4102" 
-                  span Sara
+                  span Sawan
               li.last
                 a href="https://github.com/alu4073" 
-                  span Adrián
+                  span Cristo
     section
       == yield
     footer
