--- a/views/layout.slim
+++ b/views/layout.slim
@@ -24,30 +24,8 @@ html lang="en"
   body
     header
       h1 Analizador Sint&aacute;ctico Descendente Predictivo Recursivo
-      #cssmenu
-        ul
-          li
-            a href="/" 
-              span Home
-          li
-            a href="/grammar" 
-              span Gramática
-          li
-            a href="/tests" 
-              span Pruebas
-          li
-            a href="https://github.com/alu4102/p5AnalizadorDPR" 
-              span Repositorio
-          li.has-sub.last
-            a href="#" 
-              span Autores
-            ul
-              li
-                a href="https://github.com/alu4102" 
-                  span Sawan
-              li.last
-                a href="https://github.com/alu4073" 
-                  span Cristo
+      == slim :nav
+      
     section
       == yield
     footer
