--- a/views/nav.slim
+++ b/views/nav.slim
@@ -8,3 +8,13 @@ nav
       a href=="/tests"  title="Tests" class==current?("/tests") Tests
     li 
       a href=="https://github.com/alu0100694987/p5-pdl"  title="GitHub" GitHub
+    li.has-sub.last
+      a href="#"
+        span Autores
+      ul
+        li
+          a href="https://github.com/alu0100694765"
+            span Sawan
+        li.last
+          a href="https://github.com/alu0100694987"
+            span Cristo
