--- a/views/home.slim
+++ b/views/home.slim
@@ -1,4 +1,4 @@
-p This website contains a simple example of a predictive parser
+p Esta p&aacute;gina contiene una pequeña implementaci&oacute;n de un parseador predictivo
 /img src="/images/st.gif" alt="Syntax Tree"
 #header.header
   p
