--- a/views/nav.slim
+++ b/views/nav.slim
@@ -8,13 +8,7 @@ nav
       a href=="/tests"  title="Tests" class==current?("/tests") Tests
     li 
       a href=="https://github.com/alu0100694987/p5-pdl"  title="GitHub" GitHub
-    li.has-sub.last
-      a href="#"
-        span Autores
-      ul
-        li
-          a href="https://github.com/alu0100694765"
-            span Sawan
-        li.last
-          a href="https://github.com/alu0100694987"
-            span Cristo
+    li 
+      a href=="https://github.com/alu0100694765"  title="Sawan" GitHub
+    li 
+      a href=="https://github.com/alu0100694987"  title="Cristo" GitHub
