--- a/views/nav.slim
+++ b/views/nav.slim
@@ -9,6 +9,6 @@ nav
     li 
       a href=="https://github.com/alu0100694987/p5-pdl"  title="GitHub" GitHub
     li 
-      a href=="https://github.com/alu0100694765"  title="Sawan" GitHub
+      a href=="https://github.com/alu0100694765"  title="Sawan" Sawan
     li 
-      a href=="https://github.com/alu0100694987"  title="Cristo" GitHub
+      a href=="https://github.com/alu0100694987"  title="Cristo" Cristo
