--- a/views/nav.slim
+++ b/views/nav.slim
@@ -8,3 +8,7 @@ nav
       a href=="/tests"  title="Tests" class==current?("/tests") Tests
     li 
       a href=="https://github.com/alu0100694987/p5-pdl"  title="GitHub" GitHub
+    li 
+      a href=="https://github.com/alu0100694765"  title="Sawan" Sawan
+    li 
+      a href=="https://github.com/alu0100694987"  title="Cristo" Cristo
