--- a/views/layout.slim
+++ b/views/layout.slim
@@ -30,7 +30,7 @@ html lang="en"
       == yield
     footer
       #piedepagina
-        Analizador Sint&aacute;ctico Descendente Predictivo Recursivo - PDL \
+        PrPr&aacute;ctica: Analizador Sint&aacute;ctico Descendente Predictivo Recursivo - PDL \
         a href="https://github.com/alu0100694987/p5-pdl"  https://github.com/alu0100694987/p5-pdl/
         br
 
