--- a/views/styles.scss
+++ b/views/styles.scss
@@ -13,6 +13,16 @@ body {
   text-shadow: 1px 1px 1px #A1A1A1;
 }
 
+footer {
+    position:fixed;
+    left:0;
+    bottom:0;
+    height:20px;
+    width:100%;
+    padding: 0.6em 0 0.6em 0;
+    box-shadow: inset 0px 10px 60px 0px rgba(255,255,255,0.15);
+  }
+
 h1 {
   color: $black;
   font: 32px/1 $main-font;
