--- a/views/styles.scss
+++ b/views/styles.scss
@@ -26,7 +26,7 @@ footer {
 #piedepagina {
     text-align: center;
     text-shadow: 1.5px 1.5px 1.5px white;
-    color: white;
+    color: black;
   }
   
   #piedepagina a {
