--- a/views/styles.scss
+++ b/views/styles.scss
@@ -35,7 +35,7 @@ footer {
   
   #piedepagina a:hover {
     color: white;
-    text-shadow: 1.5px 1.5px 1.5px black, 0px 4px 1px white;
+    text-shadow: 1.5px 1.5px 1.5px blue, 0px 4px 1px blue;
     text-decoration: none;
   }
 
