--- a/views/styles.scss
+++ b/views/styles.scss
@@ -30,12 +30,12 @@ footer {
   }
   
   #piedepagina a {
-    color: white;
+    color: blue;
   }
   
   #piedepagina a:hover {
     color: white;
-    text-shadow: 1.5px 1.5px 1.5px blue, 0px 4px 1px blue;
+    text-shadow: 1.5px 1.5px 1.5px black, 0px 4px 1px blue;
     text-decoration: none;
   }
 
