--- a/views/styles.scss
+++ b/views/styles.scss
@@ -11,6 +11,11 @@ body {
   font-size: 16;
   padding: 5;
   text-shadow: 1px 1px 1px #A1A1A1;
+  background-size: cover;
+  background-position: center 0;
+  background-attachment: fixed;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
 footer {
