--- a/views/styles.scss
+++ b/views/styles.scss
@@ -45,8 +45,11 @@ footer {
   }
 
 h1 {
-  color: $black;
-  font: 32px/1 $main-font;
+  font-family: Andika;
+    font-size: 65px;
+    color: white;
+    text-shadow: 0px 0px 8px $black;
+    text-align: center;
 }
 
 header h1 {
