--- a/views/styles.scss
+++ b/views/styles.scss
@@ -41,6 +41,21 @@ button {
 	/*text-shadow:#FE6 0 1px 0*/
 }
 
+input{
+	color:#333;
+	background-color:#BDBDBD;
+	border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border:none;
+	font-family:'Helvetica Neue',Arial,sans-serif;
+	font-size:16px;
+	font-weight:700;
+	height:32px;
+	padding:4px 16px;
+  
+}
+
 footer {
     position:fixed;
     left:0;
