--- a/views/layout.slim
+++ b/views/layout.slim
@@ -30,8 +30,6 @@ html lang="en"
       == yield
     footer
       #piedepagina
-        PrPr&aacute;ctica: Analizador Sint&aacute;ctico Descendente Predictivo Recursivo - PDL \
+        p Pr&aacute;ctica: Analizador Sint&aacute;ctico Descendente Predictivo Recursivo - PDL \
         a href="https://github.com/alu0100694987/p5-pdl"  https://github.com/alu0100694987/p5-pdl/
         br
-
-        a href="/" back to main
