Actualización de README.md y corrección de errores en vistas y analizador

--- a/views/gramatica.slim
+++ b/views/gramatica.slim
@@ -8,7 +8,7 @@ br
 
 ol
   li
-    |  $\Sigma = \{ ;, ., =, CONST, VAR, PROCEDURE, ID, P, ODD, CALL, END, IF, THEN, WHILE, DO, +, -, *, /, ==, <, >, <=, >=, !=, (, ), NUM \}$, 
+    |  $\Sigma = \{ ;, ., =, CONST, VAR, PROCEDURE, ID, P, ODD, CALL, END, IF, THEN, WHILE, DO, +, -, *, /, ==, <, >, <=, >=, !=, (, ), NUM \}$
   li
     |  $V = \{ program, block, statement, condition, expression, term, factor \}$ 
   li
