--- a/views/home.slim
+++ b/views/home.slim
@@ -1,8 +1,8 @@
-p Esta p&aacute;gina contiene una implementaci&oacute;n de un parseador predictivo
+p Implementaci&oacute;n de un parseador predictivo
 /img src="/images/st.gif" alt="Syntax Tree"
 #header.header
   p
-    | Carge el ejemplo a analizar:
+    | Cargue el ejemplo a analizar:
   div
     p 
       textarea#original[autofocus cols="80" rows="5"]
