Corrección de errores

--- a/views/home.slim
+++ b/views/home.slim
@@ -47,5 +47,5 @@ p Implementaci&oacute;n de un parseador predictivo
         }
 
 
-input#PARSE.mylink[value="parse" type="button"]
+input#PARSE.mylink[value=" Parsear " type="button"]
 pre#OUTPUT
