--- a/views/layout.slim
+++ b/views/layout.slim
@@ -29,4 +29,5 @@ html lang="en"
     section
       == yield
     footer
-      #piedepagina Pr&aacute;ctica: Analizador Sint&aacute;ctico Descendente Predictivo Recursivo - PDL | a href="https://github.com/alu0100694987/p5-pdl"  https://github.com/alu0100694987/p5-pdl/ br
+      #piedepagina Pr&aacute;ctica: Analizador Sint&aacute;ctico Descendente Predictivo Recursivo - PDL | 
+        a href="https://github.com/alu0100694987/p5-pdl"  https://github.com/alu0100694987/p5-pdl/ br
