Corrección de errores 5

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -29,5 +29,6 @@ html lang="en"
     section
       == yield
     footer
-      #piedepagina Pr&aacute;ctica: Analizador Sint&aacute;ctico Descendente Predictivo Recursivo - PDL \ 
+      #piedepagina
+        pp Pr&aacute;ctica: Analizador Sint&aacute;ctico Descendente Predictivo Recursivo - PDL \ 
         a href="https://github.com/alu0100694987/p5-pdl"  https://github.com/alu0100694987/p5-pdl/ br
