--- a/views/layout.slim
+++ b/views/layout.slim
@@ -31,4 +31,4 @@ html lang="en"
     footer
       #piedepagina
         pp Pr&aacute;ctica: Analizador Sint&aacute;ctico Descendente Predictivo Recursivo - PDL \ 
-        a href="https://github.com/alu0100694987/p5-pdl"  https://github.com/alu0100694987/p5-pdl/ br
+        a href="https://github.com/alu0100694987/p5-pdl"  https://github.com/alu0100694987/p5-pdl/
