--- a/views/styles.scss
+++ b/views/styles.scss
@@ -40,7 +40,7 @@ footer {
   text-align: center;
   text-shadow: 1.5px 1.5px 1.5px white;
   color: black;
-  margin-top: 50px;
+  padding-top: 50px;
   
   a {
     color: blue;
